--- a/backendd/home.html
+++ b/backendd/home.html
@@ -22,12 +22,7 @@
         <div class="section">
             <h3>การยืม</h3>
             <p>การยืมหนังสือ</p>
-            <a href="user.html" class="button">จำนวนหนังสือที่ถูกยืมอยู่</a>
-        </div>
-        <div class="section">
-            <h3>การจอง</h3>
-            <p>กรจองหนังสือ</p>
-            <a href="user.html" class="button">จำนวนหนังสือที่ถูกจอง</a>
+            <a href="reservation.html" class="button">จำนวนหนังสือที่ถูกยืมอยู่</a>
         </div>
         
     </div>
