--- a/backendd/login.html
+++ b/backendd/login.html
@@ -11,10 +11,11 @@
     
     <section class="home">
         <div class="content">
-            <a class="logo">LOGO</a>
+            <a class="logo">LibraryHub</a>
             <h2>Welcome!</h2>
-            <h3>To Our New Website</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facilis sed veritatis blanditiis sint </p>
+            <h3>To Our Library Management System</h3>
+            <p>Search, Borrow, and Manage Books Efficiently
+                Our system allows users to search for books, check availability, borrow, and manage returns seamlessly.</p>
             <div class="icon">
                 <i class="fa-bra fa-instagram"></i>
                 <i class="fab fa-facebook"></i>
