--- a/backendd/home_User.html
+++ b/backendd/home_User.html
@@ -8,16 +8,22 @@
 </head>
 <body>
 
-<nav>
-    <ul>
-        <li><a href="FH.html">หน้าข้อมูล</a></li>
-        <li><a href="home_User.html">หน้าแรก</a></li>
-        <li><a href="myReservations.html">การจองของฉัน</a></li>
-        <li><a href="login.html">เข้าสู่ระบบ</a></li>
-        <li><button id="logout">ออกจากระบบ</button></li>
-        <li><a id="username">ชื่อผู้ใช้</a></li>
-    </ul>
-</nav>
+    <header>
+        <div class="logo">
+            <img src="images/001.png" alt="Library Hub Logo">
+            <p>Library Hub</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="FH.html">ข้อมูลห้องสมุด</a></li>
+                <li><a href="home_User.html">หน้าหลัก</a></li>
+                <li><a href="myReservations.html">การจองของฉัน</a></li>
+                <li><a href="login.html">เข้าสู่ระบบ</a></li>
+                <li><span id="username">ชื่อผู้ใช้</span></li>
+                <li><button id="logout">ออกจากระบบ</button></li>
+            </ul>
+        </nav>
+    </header>
 
 <div class="container">
     <div class="welcome-message">
@@ -32,10 +38,20 @@
     <div class="promo-banner">
         <p>แนะนำหนังสือใหม่ทุกสัปดาห์!</p>
     </div>
+    
 
     <h2>📚 หนังสือยอดนิยม</h2>
     <div class="book-list" id="book-list"></div>
+    
 </div>
+<footer>
+    <p>&copy; 2025 Library Hub. All rights reserved.</p>
+    <p>เวลาเปิดบริการ</p>
+    <p>จันทร์ - พฤหัสบดี : 08.00 - 20.00 น.</p>
+    <p>ศุกร์ :  08.00 - 16.30 น.</p>
+    <p>เสาร์ - อาทิตย์ : 08.00 - 16.00 น.</p>
+    <p>วันหยุดราชการ : ปิดบริการ</p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="home_User.js"></script>
