--- a/backendd/login.html
+++ b/backendd/login.html
@@ -11,18 +11,13 @@
     
     <section class="home">
         <div class="content">
-            <a class="logo">LibraryHub</a>
+            <div class="logo">
+                <img src="images/001.png" alt="Library Hub Logo">
+            </div>
             <h2>Welcome!</h2>
             <h3>To Our Library Management System</h3>
             <p>Search, Borrow, and Manage Books Efficiently
                 Our system allows users to search for books, check availability, borrow, and manage returns seamlessly.</p>
-            <div class="icon">
-                <i class="fa-bra fa-instagram"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-youtube"></i>
-                <i class="fab fa-github"></i>
-            </div>
         </div>
         
         <div class="login">
