--- a/backendd/login.html
+++ b/backendd/login.html
@@ -14,8 +14,8 @@
             <div class="logo">
                 <img src="images/001.png" alt="Library Hub Logo">
             </div>
-            <h2>Welcome!</h2>
-            <h3>To Our Library Management System</h3>
+            <h2>Welcome</h2>
+            <h3>To Library Management System</h3>
             <p>Search, Borrow, and Manage Books Efficiently
                 Our system allows users to search for books, check availability, borrow, and manage returns seamlessly.</p>
         </div>
@@ -31,7 +31,9 @@
             </form>
             
             <div class="check">
-                <label><input type="checkbox"> จดจำฉัน</label>
+                <label class="checkbox-label">
+                    <input type="checkbox">จดจำฉัน 
+                </label>
             </div>
             
             <div class="sign-up">
